kubernetes/apps/base/media/media-robbinsdale/tracearr/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracearr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracearr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tracearr
    spec:
      containers:
      - name: tracearr
        image: ghcr.io/connorgallopo/tracearr:2.6.3
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: backup
          mountPath: /data/backup
      volumes:
      - name: backup
        persistentVolumeClaim:
          claimName: tracearr-backup
---
apiVersion: v1
kind: Service
metadata:
  name: tracearr
spec:
  selector:
    app: tracearr
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
