kubernetes/apps/base/media/media-robbinsdale/tracearr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracearr
  annotations:
    item.homer.rajsingh.info/name: Tracearr
    item.homer.rajsingh.info/subtitle: Media Server Monitoring
    item.homer.rajsingh.info/logo: https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/tracearr.svg
    item.homer.rajsingh.info/keywords: plex, streams, monitoring
    service.homer.rajsingh.info/name: Media
    service.homer.rajsingh.info/icon: fas fa-tv
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: home
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ts
    namespace: home
  hostnames:
  - tracearr.${CLUSTER_DOMAIN}
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: tracearr
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
